add_library(panther_text OBJECT cursor.cpp cursor.h encoding.cpp encoding.h findtextmanager.cpp findtextmanager.h regex.cpp regex.h text.cpp text.h textbuffer.cpp textbuffer.h textdelta.cpp textdelta.h textfile.cpp textfile.h textiterator.cpp textiterator.h textline.cpp textline.h textposition.cpp textposition.h textview.cpp textview.h unicode.cpp unicode.h wrappedtextiterator.cpp wrappedtextiterator.h)
set(ALL_OBJECT_FILES ${ALL_OBJECT_FILES} $<TARGET_OBJECTS:panther_text> PARENT_SCOPE)
